# claude-standup

./: .coverage  .gitignore  Cargo.toml  claude-standup.spec  pyproject.toml
.github/workflows/: release.yml
claude_standup/: __init__.py  cache.py  classifier.py  cli.py  daemon.py  llm.py  models.py  parser.py  reporter.py  service.py
claude_standup.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
docs/superpowers/plans/: 2026-04-21-claude-standup-v2.md  2026-04-21-claude-standup.md
docs/superpowers/specs/: 2026-04-21-claude-standup-design.md  2026-04-21-claude-standup-v2-design.md
installer/homebrew/: claude-standup.rb
installer/linux/: build.sh  claude-standup.service  postinst  prerm
installer/macos/: build.sh  com.claude-standup.daemon.plist  postinstall  preinstall
src/: cache.rs  cli.rs  main.rs  models.rs  parser.rs  reporter.rs
tests/: conftest.py  test_cache.py  test_classifier.py  test_cli.py  test_daemon.py  test_integration.py  test_llm.py  test_parser.py  test_reporter.py  test_service.py  test_template_reporter.py
tests/fixtures/: malformed_lines.jsonl  multi_session.jsonl  tool_heavy_session.jsonl  valid_session.jsonl
