[package]
name = "claude-standup"
version = "0.1.0"
edition = "2021"
description = "Daily standup reports from Claude Code activity logs"
license = "MIT"
repository = "https://github.com/theburrowhub/claude-standup"

[[bin]]
name = "claude-standup"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
walkdir = "2"

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"
