[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "claude-standup"
version = "0.1.0"
description = "Generate daily standup reports from Claude Code activity logs"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[project.scripts]
claude-standup = "claude_standup.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
